# Warden

./: .gitignore  .opencode.json  AGENTS.md  Cargo.toml  README.md  design.md  repo-summary.md  skills-lock.json  wrangler.jsonc
.github/workflows/: ci.yml  release.yml  website.yml
crates/warden-cli/: Cargo.toml
crates/warden-cli/src/: main.rs
crates/warden-core/: Cargo.toml  build.rs
crates/warden-core/src/: error.rs  lib.rs  types.rs
crates/warden-discovery/: Cargo.toml
crates/warden-discovery/src/: error.rs  lib.rs  node.rs
crates/warden-identity/: Cargo.toml
crates/warden-identity/src/: error.rs  keypair.rs  lib.rs  peer_id.rs  sign.rs
crates/warden-protocol/: Cargo.toml
crates/warden-protocol/src/: error.rs  frame.rs  lib.rs  outbox.rs  session.rs
crates/warden-storage/: Cargo.toml
crates/warden-storage/src/: contacts.rs  database.rs  error.rs  groups.rs  lib.rs  messages.rs  outbox.rs
crates/warden-transport/: Cargo.toml
crates/warden-transport/src/: client.rs  config.rs  error.rs  known_hosts.rs  lib.rs  server.rs  session.rs
crates/warden-tui/: Cargo.toml
crates/warden-tui/src/: lib.rs
docs/ai/: setup.md  tools.md  troubleshooting.md  workflow.md
proto/: buf.yaml
proto/warden/v1/: chat_frame.proto
scripts/: astfind.ps1  graph.ps1  repoctx.ps1  watchgraph.ps1
website/: index.html
