[package]
name = "warden"
version = "0.1.0"
edition = "2024"
description = "Peer-to-peer decentralized chat over SSH"

[dependencies]
warden-core = { path = "../warden-core" }
warden-identity = { path = "../warden-identity" }
warden-transport = { path = "../warden-transport" }
warden-protocol = { path = "../warden-protocol" }
warden-storage = { path = "../warden-storage" }
warden-discovery = { path = "../warden-discovery" }
warden-tui = { path = "../warden-tui" }
clap = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
libp2p = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
home = { workspace = true }
