[package]
name = "warden-protocol"
version = "0.1.0"
edition = "2024"
description = "Chat protocol: framing, session management, outbox queue"

[dependencies]
warden-core = { path = "../warden-core" }
warden-identity = { path = "../warden-identity" }
warden-transport = { path = "../warden-transport" }
prost = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
