[package]
name = "warden-tui"
version = "0.2.0"
edition = "2024"
description = "Terminal UI for Warden P2P chat"

[dependencies]
warden-core = { path = "../warden-core" }
warden-storage = { path = "../warden-storage" }
warden-transport = { path = "../warden-transport" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
