[package]
name = "warden-tui"
version = "0.3.1"
edition = "2024"
description = "Terminal UI for Warden P2P chat"

[dependencies]
warden-core = { path = "../warden-core" }
warden-identity = { path = "../warden-identity" }
warden-storage = { path = "../warden-storage" }
warden-transport = { path = "../warden-transport" }
warden-discovery = { path = "../warden-discovery" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
